# orb-integration-hub

./: .cursorignore  .gitignore  .pre-commit-config.yaml  .windsurfrules  CASE_CONVENTIONS.md  CHANGELOG-multi-api.md  CHANGELOG.md  CLAUDE.md  Pipfile  README.md  SCHEMA_UPGRADE_VALIDATION.md  UNIT_TESTS_README.md  authorizer-response.json  config-example-full.txt  git_log.txt  orb_schema_generator-1.1.0-py3-none-any.whl  package-lock.json  package.json  pyproject.toml  run_e2e_generator.py  schema-config.json  schema-generator.yml  schema-generator.yml.v1.backup  sdk-schema.graphql  temp-api-key.json  test-authorizer-event.json  test-implementation-plan.md  test-schema-generator.yml  test-sdk-api.py
.archive/: README.md
.claude/: settings.json
.cursor/: .cursorrules
.github/: CODEOWNERS
.taskmaster/: config.json  prd.md  state.json
ai/: auth-flow.md  context.ai  correct.ai  start.ai  stop.ai  structure.ai
assets/: component-architecture.mermaid
backend/: Pipfile
context/: dynamodb_resolver_standards.md  project.md  start.md  state.md
docs/: BOOTSTRAP.md  README.md  api-error-handling.md  api.md  appsync-monitoring.md  architecture.md  authentication-flow.md  codeartifact-implementation.md  comprehensive-review.md  custom-query-architecture.md  deployment-guide.md  development.md  e2e-cowork-instructions.md  e2e-testing.md  environment-configuration.md  error-codes.md  error-handling.md  frontend-design.md  frontend-implementation-plan.md  frontend-todo.md  lambda-package-migration.md  multi-api-appsync-setup.md  project.md  python-packages.md  schema.md  (+2 more)
(+2421 files in other folders)
